# varg3d

./: .gitignore  CMakeLists.txt  Makefile  SDL_built.sh  author  camera.c  cleanup.c  cleanup_ini_blocks.c  error_parser.c  ini_parser.c  ini_parser.h  init.c  keyboard.c  light.c  loop.c  main.c  map.ini  parser_utils.c  parsing.c  render.c  texture.c  vec2d.c  vec2d2.c  wall.c  wall_render.c  wolf.h
libft/: Makefile  ft_atoi.c  ft_atoi_base.c  ft_bzero.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strdel.c  ft_strdup.c  ft_strequ.c  (+22 more)
